# sidtools

./: .gitignore  README.md  latex_build.sh  readme.md  sentiment.py
TextSanitize/: meson.build  readme.md
TextSanitize/src/: MP_main.cc  cleaner.cc  cleaner.h  iconv_handle.h  line_reader.h  main.cc  options.h  session.h
expl/: dllhost.ps1  readme.md  syswinmanager.ps1  windllhost.ps1
file_organizer/: README.md  config.yaml  file_organizer.py  pyproject.toml  readme.md
file_organizer/file_organizer/: __init__.py  __main__.py  cli.py  config.py  detection.py  logger.py  metadata.py  operations.py  parallel.py  rules.py  utils.py
file_organizer/file_organizer/modes/: __init__.py  cleanup.py  date_organize.py  dedup.py  git.py  organize.py  watch.py
file_organizer/tests/: __init__.py  test_cleanup.py  test_git.py  test_organize.py  test_utils.py
insta_stories_download/: InstaStory.py  capture.py  readme.md  speech_recon.py
latex_compile/: readme.md
ocr/: main.py  readme.md
photo_finder_cpp/: main.cc  readme.md
sentiment_analysis/: readme.md  sentiment.py
sizes_cc/: main.cc  readme.md
tampermonkey_scripts/: readme.md  tampermonkey_chatgpt_temporary.js  tampermonkey_regenerate_deepseek.js
tampermonkey_scripts/gemini_exporter/: gemini_exporter.js
totp/: lacis_code_telegram_bot.py  main.py  readme.md
translate/: main.py  readme.md
